...
        ),
        onFeedClicked = { println("On Feed Clicked!") },
        onAddFeed = { println("On Feed Clicked!") }
    )
}

const val AddFeedFab = "AddFeedFab"
